# philab-mujoco

./: .gitignore  pyproject.toml
src/philab_mujoco/: __init__.py  export.py  registry.py  train_jax_ppo.py  train_params.py
src/philab_mujoco/locomotion/: __init__.py
src/philab_mujoco/locomotion/tron_pf/: base.py  joystick.py  randomize.py
src/philab_mujoco/locomotion/tron_sf/: base.py  constants.py  joystick.py  randomize.py
src/philab_mujoco/locomotion/tron_wf/: base.py  constants.py  joystick.py  randomize.py
src/philab_mujoco/resources/robots/PF_TRON1A/xml/: robot.xml
src/philab_mujoco/resources/robots/SF_TRON1A/xml/: robot.xml
src/philab_mujoco/resources/robots/WF_TRON1A/xml/: robot.xml
src/philab_mujoco/utilities/: export.ipynb  export.py  export_actor.ipynb  export_actor_encoder.ipynb
